# Lidar_robot

./: README.md
lidar_bot_ros2 (2)/lidar_bot_ros2/lidar_bot_ros2/lidar_bot_ws/src/lidar_bot/: CMakeLists.txt  README.md  package.xml
lidar_bot_ros2 (2)/lidar_bot_ros2/lidar_bot_ros2/lidar_bot_ws/src/lidar_bot/config/: amcl.yaml  map_server.yaml  slam_toolbox.yaml
lidar_bot_ros2 (2)/lidar_bot_ros2/lidar_bot_ros2/lidar_bot_ws/src/lidar_bot/launch/: lidar_bot.launch.py  mapping.launch.py
lidar_bot_ros2 (2)/lidar_bot_ros2/lidar_bot_ros2/lidar_bot_ws/src/lidar_bot/maps/: simple_room.pgm  simple_room.yaml
lidar_bot_ros2 (2)/lidar_bot_ros2/lidar_bot_ros2/lidar_bot_ws/src/lidar_bot/rviz/: lidar_bot.rviz
lidar_bot_ros2 (2)/lidar_bot_ros2/lidar_bot_ros2/lidar_bot_ws/src/lidar_bot/urdf/: lidar_bot.urdf
lidar_bot_ros2 (2)/lidar_bot_ros2/lidar_bot_ros2/lidar_bot_ws/src/lidar_bot/worlds/: simple_room.world
