<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_bot</name>
  <version>0.1.0</version>
  <description>Simple 2D lidar robot for ROS 2 Humble — Gazebo + AMCL localization + RViz</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Robot description -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>

  <!-- Simulation -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>

  <!-- Navigation / Localization -->
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>

  <!-- Visualization -->
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
